Text alignment fix

--- a/src/Pages/OralHistories/OralHistories.scss
+++ b/src/Pages/OralHistories/OralHistories.scss
@@ -15,9 +15,9 @@
 			flex-direction: column;
 
 			h1 {
-				font-size: 4em;
+				font-size: 4.5em;
 				font-family: $fontBabasNeue;
-				text-align: center;
+				text-align: left;
 				font-weight: 100;
 			}
 			p {
